Swap out chef table in policy-add-members components and modify necessary css
Signed-off-by: seajamied <jdegnan@chef.io>

--- a/components/automate-ui/src/app/modules/policy/add-members/policy-add-members.component.scss
+++ b/components/automate-ui/src/app/modules/policy/add-members/policy-add-members.component.scss
@@ -130,8 +130,8 @@ chef-page {
     }
 
     #inner-container {
-      chef-table {
-        chef-tbody {
+      chef-table-new {
+        chef-table-body {
           height: calc(100vh - 350px);
           overflow-y: scroll;
         }
