--- a/components/automate-ui/src/app/modules/policy/add-members/policy-add-members.component.html
+++ b/components/automate-ui/src/app/modules/policy/add-members/policy-add-members.component.html
@@ -113,34 +113,34 @@
           </div>
         </div>
         <div id="inner-container">
-          <chef-table>
-            <chef-thead>
-              <chef-tr>
-                <chef-th class="checkbox-row"></chef-th>
-                <chef-th>ID</chef-th>
-                <chef-th>Type</chef-th>
-              </chef-tr>
-            </chef-thead>
-            <chef-tbody>
-              <chef-tr *ngFor="let member of sortedMembersAvailable">
-                <chef-td class="checkbox-row">
+          <chef-table-new>
+            <chef-table-header>
+              <chef-table-row>
+                <chef-table-header-cell class="checkbox-row"></chef-table-header-cell>
+                <chef-table-header-cell>ID</chef-table-header-cell>
+                <chef-table-header-cell>Type</chef-table-header-cell>
+              </chef-table-row>
+            </chef-table-header>
+            <chef-table-body>
+              <chef-table-row *ngFor="let member of sortedMembersAvailable">
+                <chef-table-cell class="checkbox-row">
                   <chef-checkbox (change)="addOrRemoveQueuedMember($event.detail, member)" [checked]="isMemberChecked(member)"></chef-checkbox>
-                </chef-td>
+                </chef-table-cell>
                 <!-- TODO get error but properly find page when you click this link for teams -->
-                <chef-td>
+                <chef-table-cell>
                   <a *ngIf="memberHasURL(member)" [routerLink]="memberURL(member)" target="_blank">
                     {{ member.displayName }}
                   </a>
                   <ng-container *ngIf="!memberHasURL(member)">
                     {{ member.displayName }}
                   </ng-container>
-                </chef-td>
-                <chef-td>
+                </chef-table-cell>
+                <chef-table-cell>
                   {{ member.displayType }}
-                </chef-td>
-              </chef-tr>
-            </chef-tbody>
-          </chef-table>
+                </chef-table-cell>
+              </chef-table-row>
+            </chef-table-body>
+          </chef-table-new>
         </div>
       </div>
     </div>
