--- a/components/automate-ui/src/app/components/table/table-cell/table-cell.component.scss
+++ b/components/automate-ui/src/app/components/table/table-cell/table-cell.component.scss
@@ -9,7 +9,7 @@
   border-bottom: 1px solid $chef-grey;
   border-top: 1px solid $chef-grey;
   overflow: hidden;
-  text-overflow: ellipsis;
+  // text-overflow: ellipsis;
 
   &.text-right {
     text-align: right;
