update job-nodes-form to use table
Signed-off-by: seajamied <jdegnan@chef.io>

--- a/components/automate-ui/src/app/page-components/job-nodes-form/job-nodes-form.component.html
+++ b/components/automate-ui/src/app/page-components/job-nodes-form/job-nodes-form.component.html
@@ -166,11 +166,13 @@
             [attr.aria-hidden]="!(isLoadingPreviewNodesFor(managerControl.value.id) | async)">
             <chef-loading-spinner size="50"></chef-loading-spinner>
           </div>
-          <chef-table>
-            <chef-tr *ngFor="let node of previewNodesFor(managerControl.value.id) | async">
-              <chef-td>{{node}}</chef-td>
-            </chef-tr>
-          </chef-table>
+          <chef-table-new>
+            <chef-table-body>
+              <chef-table-row *ngFor="let node of previewNodesFor(managerControl.value.id) | async">
+                <chef-table-cell>{{node}}</chef-table-cell>
+              </chef-table-row>
+            </chef-table-body>
+          </chef-table-new>
         </div>
       </div>
     </chef-card>
