--- a/components/automate-ui/src/app/page-components/job-profiles-form/job-profiles-form.component.scss
+++ b/components/automate-ui/src/app/page-components/job-profiles-form/job-profiles-form.component.scss
@@ -1,3 +1,9 @@
+.flex-for-checkbox {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
 [type="checkbox"] {
   margin-right: 1em;
 }
